--- a/styles/index.css
+++ b/styles/index.css
@@ -3,59 +3,49 @@
   background: url("../images/homepage-background.png") no-repeat;
   background-size: cover;
   background-position: center;
+  overflow: hidden;
+  position: relative;
 }
 .hero-section {
+  position: sticky;
+  top: 0px;
+  width: 100%;
+  z-index: 1000;
+}
+.hes-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.hes-hero {
+  max-width: 65rem;
   padding: 0 2rem;
-}
-.hero-section-container {
+  position: relative;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+}
+.hes-header-logo {
+  flex: 1;
+  display: flex;
   align-items: center;
-  max-width: 1350px;
-  margin: auto;
-  padding-top: 66px;
 }
-.hes-navbar {
+.hes-nav {
   display: flex;
-  gap: 2rem;
+  flex: 3;
 }
-.hes-navbar li {
-  font-family: "Montserrat", sans-serif;
-  font-size: 17px;
-  font-weight: 500;
-  line-height: 21px;
-  color: rgba(255, 255, 255, 1);
+.hes-links {
+  flex: 2;
 }
-.hes-navbar li:hover {
-  text-decoration: underline;
-  text-decoration-color: rgba(223, 105, 81, 1);
-  text-decoration-thickness: 3px;
-}
-.hes-hamburger-menu li:hover {
-  text-decoration: underline;
-  text-decoration-color: rgba(223, 105, 81, 1);
-  text-decoration-thickness: 3px;
-}
-.hes-dropdown-menu {
-  position: absolute;
-  display: none;
-}
-.hes-dropdown-menu ul {
-  position: absolute;
-  top: 40px;
-  left: 10px;
-  display: block;
-}
-
-.hes-dropdown-menu li {
-  margin: 5px;
-}
-
-.hes-navbar li:hover .hes-dropdown-menu {
-  display: block;
-}
-
 .hes-action-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+.hes-btn {
+  display: inline-block;
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   padding: 15px 25px;
@@ -65,41 +55,150 @@
   border: none;
   cursor: pointer;
   outline: none;
+  transition: 0.3s;
 }
-.hes-action-btn:hover {
-  scale: 1.05;
+.hes-links > ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.hes-toggle-btn {
-  color: rgba(223, 105, 81, 1);
-  font-size: 2rem;
-  cursor: pointer;
+.hes-link {
+  position: relative;
+}
+.hes-link > a {
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 21px;
+  color: rgba(255, 255, 255, 1);
+  letter-spacing: 1px;
+  padding: 0 0.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: 0.5s;
+}
+.hes-link > a > i {
+  margin-left: 0.2rem;
+}
+.hes-link:hover > a {
+  transform: scale(1.1);
+  text-decoration: underline;
+  text-decoration-color: rgba(223, 105, 81, 1);
+  text-decoration-thickness: 3px;
+}
+
+.hes-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 10rem;
+  transform: translateY(10px);
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.5s;
+}
+.hes-dropdown ul {
+  position: relative;
+}
+.hes-dropdown-link > a {
+  display: flex;
+  background-color: rgba(217, 217, 217, 0.58);
+  color: rgba(255, 255, 255, 1);
+  padding: 0.5rem 1rem;
+  font-size: 14px;
+  align-items: center;
+  justify-content: space-between;
+  transition: 0.3s;
+}
+.hes-dropdown-link:hover > a {
+  background-color: rgba(223, 105, 81, 1);
+}
+.hes-dropdown-link:not(:nth-last-child(2)) {
+  border-bottom: 1px solid #efefef;
+}
+/* buradaki position gereksiz olabilir. sonra kontrol et */
+.hes-dropdown-link {
+  position: relative;
+}
+.hes-link:hover > .hes-dropdown,
+.hes-dropdown-link:hover > .hes-dropdown {
+  transform: translate(0, 0);
+  opacity: 1;
+  pointer-events: auto;
+}
+.hes-hamburger-menu-container {
+  flex: 1;
   display: none;
+  align-items: center;
+  justify-content: flex-end;
 }
 .hes-hamburger-menu {
-  display: none;
-  position: absolute;
-  right: 2rem;
-  height: 0;
-  width: 300px;
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(15px);
-  border-radius: 10px;
-  overflow: hidden;
-}
-.hes-hamburger-menu.open {
-  height: 240px;
-}
-.hes-hamburger-menu li {
-  padding: 0.7rem;
+  width: 2.5rem;
+  height: 2.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fff;
 }
-.hes-hamburger-menu .hes-action-btn {
-  width: 100%;
-  display: flex;
-  justify-content: center;
+.hes-hamburger-menu div {
+  width: 1.6rem;
+  height: 3px;
+  border-radius: 3px;
+  background-color: rgba(223, 105, 81, 1);
+  position: relative;
+  z-index: 1001;
+  transition: 0.5s;
+}
+.hes-hamburger-menu div:before,
+.hes-hamburger-menu div:after {
+  content: "";
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  background-color: rgba(223, 105, 81, 1);
+  border-radius: 3px;
+}
+.hes-hamburger-menu div:before {
+  transform: translateY(-7px);
+}
+.hes-hamburger-menu div:after {
+  transform: translateY(7px);
+}
+#hes-check {
+  position: absolute;
+  top: 50%;
+  right: 2rem;
+  transform: translateY(-50%);
+  width: 2.5rem;
+  height: 2.5rem;
+  z-index: 90000;
+  cursor: pointer;
+  opacity: 0;
+  display: none;
+}
+#hes-check:checked ~ .hes-hamburger-menu-container .hes-hamburger-menu div {
+  background-color: transparent;
+}
+#hes-check:checked
+  ~ .hes-hamburger-menu-container
+  .hes-hamburger-menu
+  div:before {
+  transform: translateY(0) rotate(-45deg);
+}
+#hes-check:checked
+  ~ .hes-hamburger-menu-container
+  .hes-hamburger-menu
+  div:after {
+  transform: translateY(0) rotate(45deg);
+}
+@keyframes animation {
+  from {
+    opacity: 0;
+    transform: translateY(15px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 
 .hes-title-box {
@@ -151,7 +250,6 @@
   background: transparent;
   color: rgba(255, 255, 255, 1);
   outline: none;
-  -webkit-border-radius: 1px;
 }
 
 .hes-input option {
@@ -189,16 +287,104 @@
   transform: translateY(50%);
 }
 @media (max-width: 880px) {
-  .hes-navbar,
-  .hes-action-btn {
+  .hes-hamburger-menu-container {
+    display: flex;
+  }
+  #hes-check {
+    display: block;
+  }
+  .hes-nav {
+    position: fixed;
+    height: calc(100vh - 3rem);
+    top: 3rem;
+    left: 0;
+    width: 100%;
+    background-color: rgba(217, 217, 217, 0.34);
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transform: translateX(100%);
+    transition: 0.65s;
+  }
+  #hes-check:checked ~ .hes-nav {
+    transform: translateX(0);
+  }
+  #hes-check:checked ~ .hes-nav .hes-link,
+  #hes-check:checked ~ .hes-nav .hes-action-btn {
+    animation: animation 0.5s ease forwards var(--i);
+  }
+  .hes-links {
+    flex: initial;
+    width: 100%;
+  }
+  .hes-links > ul {
+    flex-direction: column;
+  }
+  .hes-link {
+    width: 100%;
+    opacity: 0;
+    transform: translateY(15px);
+  }
+  .hes-link > a {
+    line-height: 1;
+    padding: 1.6rem 2rem;
+  }
+  .hes-link:hover > a {
+    transform: scale(1);
+    background-color: rgba(223, 105, 81, 1);
+  }
+  .hes-dropdown {
+    position: initial;
+    top: initial;
+    left: initial;
+    transform: initial;
+    opacity: 1;
+    pointer-events: auto;
+    width: 100%;
+    padding: 0;
+    background-color: #8b322c;
     display: none;
   }
-  .hes-toggle-btn {
+  .hes-link:hover > .hes-dropdown,
+  .hes-dropdown-link:hover > .hes-dropdown {
     display: block;
   }
-  .hes-hamburger-menu {
-    display: block;
+  .hes-link:hover > a > i,
+  .hes-dropdown-link:hover > a > i {
+    transform: rotate(360deg);
   }
+  .hes-dropdown-link > a {
+    background-color: transparent;
+    color: rgba(255, 255, 255, 1);
+    padding: 1.2rem 2rem;
+    line-height: 1;
+  }
+  .hes-dropdown-link:not(:nth-last-child(2)) {
+    border-bottom: none;
+  }
+  .hes-dropdown-link:hover > a {
+    background-color: rgba(223, 105, 81, 1);
+  }
+  .hes-link > a > i {
+    font-size: 1.1rem;
+    transform: rotate(-90deg);
+    transition: 0.7s;
+  }
+  .hes-dropdown i {
+    font-size: 1rem;
+    transition: 0.7s;
+  }
+  .hes-action-btn {
+    flex: initial;
+    width: 100%;
+    padding: 1.5rem 1.9rem;
+    justify-content: flex-start;
+    opacity: 0;
+    transform: translateY(15px);
+  }
+
   .hes-select-box {
     flex-direction: column;
     align-items: flex-start;
@@ -214,13 +400,6 @@
     gap: 10px;
     padding-left: 25%;
     padding-top: 275px;
-  }
-}
-
-@media (max-width: 550px) {
-  .hes-hamburger-menu {
-    left: 2rem;
-    width: unset;
   }
 }
 
