--- a/styles/index.css
+++ b/styles/index.css
@@ -316,14 +316,12 @@
 .homepage-europe-sightseeing-tours{
   display: flex;
   justify-content: center;
-  margin-left: auto;
 }
 .europe-sightseeing-tours-special-container{
   position: relative;
   align-items: center;
   justify-content: space-between;
   max-width: 1483px;
-  max-height: 3551px;
   flex-wrap: wrap;
   flex: 1;
 }
@@ -347,8 +345,8 @@
 .est-title{
  color: #181e4b;
  font-family: "Volkhov", serif;
- font-size: clamp(14px, 3vw, 50px);
- line-height: 71.04px;
+ font-size: clamp(35px, 5vw, 50px);
+ line-height: clamp(50px, 5vw, 72px);
 }
 .est-paragraph{
   font-family: "Poppins", sans-serif;
@@ -360,28 +358,22 @@
 .est-button{
   left: 0;
   bottom: 0;
-  width: 177px;
-  height: 57px;
   border-radius: 10px;
-  border-color: transparent;
+  border: none;
   background-color: #DF6951;
-  padding: 0 36px 9px 0;
-  gap: 10px;
-  text-align: left;
+  padding: 15px 25px;
   color: white;
   font-family: "Poppins", sans-serif;
   font-size: 17px;
-  font-weight: 600px;
+  font-weight: 600;
 }
 .Destination-image-box{
  display: flex;
- margin: 60px 0 250px 0;
+ margin: 60px 0;
  align-items: center;
  gap: 60px;
  max-width: 1350px;
- max-height: 850px;
  flex-wrap: wrap;
- width: 100%;
 }
 .homepage-explore-section {
   display: flex;
