--- a/styles/index.css
+++ b/styles/index.css
@@ -302,78 +302,67 @@
   .illustration {
     display: block;
   }
-  .europe-sightseeing-tours-special-container{
-    justify-content: center;
-    width: 100%;
-    flex-wrap: wrap;
-    margin-left: 20px;
-  }
-  .Destination-image-box{
-    justify-content: center;
-  }
 }
 
-.homepage-europe-sightseeing-tours{
+.homepage-europe-sightseeing-tours {
   display: flex;
   justify-content: center;
+  padding: 0 20px;
 }
-.europe-sightseeing-tours-special-container{
+.europe-sightseeing-tours-special-container {
   position: relative;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 1483px;
-  flex-wrap: wrap;
+  max-width: 1350px;
   flex: 1;
 }
-.est-illustration{
+.est-illustration {
   display: flex;
   position: absolute;
   right: 0;
   max-width: 552px;
   max-height: 711px;
   flex-wrap: wrap;
-  z-index:-1;
+  z-index: -1;
   width: 100%;
 }
 
-.est-subtitle{
-  color:#DF6951;
+.est-subtitle {
+  color: #df6951;
   font-family: "Poppins", sans-serif;
   font-size: clamp(12px, 3vw, 18px);
   letter-spacing: 2px;
 }
-.est-title{
- color: #181e4b;
- font-family: "Volkhov", serif;
- font-size: clamp(35px, 5vw, 50px);
- line-height: clamp(50px, 5vw, 72px);
+.est-title {
+  color: #181e4b;
+  font-family: "Volkhov", serif;
+  font-size: clamp(35px, 5vw, 50px);
+  line-height: clamp(50px, 5vw, 72px);
 }
-.est-paragraph{
+.est-paragraph {
   font-family: "Poppins", sans-serif;
   font-size: clamp(4px, 3vw, 16px);
   font-weight: 400px;
   margin: 25px 0;
 }
 
-.est-button{
+.est-button {
   left: 0;
   bottom: 0;
   border-radius: 10px;
   border: none;
-  background-color: #DF6951;
+  background-color: #df6951;
   padding: 15px 25px;
   color: white;
   font-family: "Poppins", sans-serif;
   font-size: 17px;
   font-weight: 600;
 }
-.Destination-image-box{
- display: flex;
- margin: 60px 0;
- align-items: center;
- gap: 60px;
- max-width: 1350px;
- flex-wrap: wrap;
+.Destination-image-box {
+  display: flex;
+  margin: 60px 0;
+  align-items: center;
+  gap: 60px;
+  max-width: 1350px;
+  flex-wrap: wrap;
 }
 .homepage-explore-section {
   display: flex;
@@ -436,6 +425,11 @@
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 1);
   box-shadow: 0px 20px 35px 0px rgba(223, 105, 81, 0.15);
+}
+@media (max-width: 1200px) {
+  .Destination-image-box {
+    justify-content: center;
+  }
 }
 @media (max-width: 1000px) {
   .explore-section-container {
