Update about.html and abput.css

--- a/styles/about.css
+++ b/styles/about.css
@@ -121,3 +121,20 @@
 .span-image {
   grid-row: auto / span 2;
 }
+.wanderlust-video-banner-container{
+  position: relative;
+}
+.w-vide{
+  width: 100%;
+}
+.w-video-title {
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  font-family: "Yesterday", cursive;
+  font-size: clamp (75px, 10vw, 158px);
+  line-height: clamp (158px, 10vw, 224px);
+font-weight: 400;
+color: #ffff;
+}
