--- a/styles/index.css
+++ b/styles/index.css
@@ -304,6 +304,32 @@
   }
 }
 
+.homepage-liberty-banner {
+  background: url("../images/liberty-statue-img.png") no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  padding: 50px 0;
+  width: 100%;
+  height: 400px;
+  position: relative;
+}
+.liberty-banner {
+  position: absolute;
+  top: 30%;
+  left: 20%;
+}
+.lb-title {
+  font-family: "Volkhov", serif;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 65px;
+  color: rgba(255, 255, 255, 1);
+}
+
+.lb-signature {
+  text-align: end;
+}
 .homepage-explore-section {
   display: flex;
   padding: 50px 0;
