--- a/styles/about.css
+++ b/styles/about.css
@@ -1,9 +1,8 @@
-
 .about-page-hero {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    background-image: url('../images/about/about-header-img.png');
+    background-image: url("../images/about/about-header-img.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -12,26 +11,23 @@
 
 .hero-container {
     flex: 1;
-    color: rgba(255, 255, 255, 1); 
 }
 
 .h-top-nav-bar {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: flex-start;
-    gap: 50px;
-    margin: 75px;
+    margin: 60px;
+    color: rgba(255, 255, 255, 1);
 }
 
 .tnb-logo {
-    margin-right: 50px;
 }
 
 .tnb-nav-bar {
-    width: 800px;
     display: flex;
     justify-content: space-around;
-    font-family: Circular, sans-serif;
+    font-family: Poppins, sans-serif;
     font-size: 17px;
     font-weight: 500;
     line-height: 21.5px;
@@ -42,11 +38,12 @@
     justify-content: center;
     align-items: center;
     gap: 40px;
+    margin-right: 50px;
 }
 
 .nb-nav-elements li:hover {
     border-bottom: 3px solid #df6951;
-    text-decoration-color:  rgba(223, 105, 81, 1);
+    text-decoration-color: rgba(223, 105, 81, 1);
     text-decoration-thickness: 2px;
     cursor: pointer;
     /* transition: 0.1s; */
@@ -66,7 +63,7 @@
 }
 
 .ne-dropdown-services:hover .ne-services {
-    background-color: darkgoldenrod;
+    /* background-color: darkgoldenrod; */
 }
 
 .ne-dropdown-services li a {
@@ -75,20 +72,21 @@
 }
 
 .ne-dropdown-services li a:hover {
-    background-color: lightgrey;
+    /* background-color: lightgrey; */
 }
 
 .ne-dropdown-services li a i {
     font-size: 20px;
     margin-left: 5px;
 }
+
 .ds-dropdown-menu {
     display: none;
     position: absolute;
     padding: 10px 0px;
     left: 0px;
     top: 100%;
-    font-family: Poppins;
+    font-family: Poppins, sans-serif;;
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
@@ -97,13 +95,13 @@
 }
 
 .ds-dropdown-menu li {
-    background-color: gray;
-    padding: 5px 10px; 
+    background-color: lightgray;
+    padding: 5px 10px;
     border-radius: 5px;
 }
 
 .ds-dropdown-menu:before {
-    content: '';
+    content: "";
     position: absolute;
     top: 0px;
     left: 0px;
@@ -112,30 +110,35 @@
 }
 
 .nb-button {
+    font-family: Poppins, sans-serif;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 21.5px;
     padding: 15px 25px;
     color: rgba(255, 255, 255, 1);
     background-color: rgba(223, 105, 81, 1);
     border-radius: 7px;
     border: none;
     cursor: pointer;
+    margin-left: 50px;
 }
 
 .h-middle-script {
     text-align: center;
-    margin: 175px auto;
-    color: rgba(255, 255, 255, 1); 
+    margin: 195px auto;
+    color: rgba(255, 255, 255, 1);
 }
 
 .ms-read {
-    font-family: Poppins;
+    font-family: Poppins, sans-serif;;
     font-size: 18px;
     font-weight: 700;
-    line-height:27px;
+    line-height: 27px;
     letter-spacing: 0.1em;
 }
 
 .ms-about-us {
-    font-family: Yesteryear;
+    font-family: Yesteryear, sans-serif;;
     font-size: 157.43px;
     font-weight: 400;
     line-height: 223.68px;
