--- a/styles/index.css
+++ b/styles/index.css
@@ -706,9 +706,11 @@
 }
 
 footer{
+  background-color: #f8f8f8;
   margin-left: 376px;
   padding: 4rem 1rem;
   height: 484px; 
+  font-family: 'Volkhov', sans-serif ;
  
 }
 
@@ -806,3 +808,4 @@ footer a{
   }
 }
 
+@import url('https://fonts.cdnfonts.com/css/volkhov');
