--- a/styles/about.css
+++ b/styles/about.css
@@ -23,6 +23,8 @@
 
 .tnb-nav-bar {
     display: flex;
+    justify-content: space-around;
+    flex: 0.7;
     font-family: Poppins, sans-serif;
     font-size: 17px;
     font-weight: 500;
@@ -40,12 +42,11 @@
 .nb-nav-elements li:hover {
     border-bottom: 3px solid #df6951;
     cursor: pointer;
-    transition: 0.1s; 
+    transition: all 0.4s; 
 }
 
 .nb-nav-elements li a {
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.80);
+    color: rgba(255, 255, 255, 1);
     transition: all 0.4s;
 }
 
@@ -65,8 +66,8 @@
 .ne-dropdown-services:hover .ds-dropdown-menu {
     display: block;
     background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 16px;
-    /* margin-top: 5px; */
+    border-radius: 8px;
+    margin-top: 1px;
 }
 
 .ne-dropdown-services li a i {
@@ -94,18 +95,11 @@
 
 .ds-dropdown-menu li:hover {
     display: block;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.4);    
+    border-bottom: none;
 }
 
-.ds-dropdown-menu:before {
-    content: "";
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    border-bottom: 10px solid transparent;
-}
-
-.nb-button {
+.nb-nav-elements li button {
     font-family: Poppins, sans-serif;
     font-size: 17px;
     font-weight: 500;
@@ -118,6 +112,10 @@
     cursor: pointer;
     margin-left: 50px;
 }
+
+/* .nb-nav-elements li button:hover {
+    border-bottom: none;
+} */
 
 .h-middle-script {
     margin: 195px auto;
@@ -140,68 +138,90 @@
     line-height: clamp(125px, 40vw, 223.68px);
 }
 
-.hm-icon {
+.hamburger-menu-icon {
+    display: flex;
+    flex-direction: column;
+    height: min-content;
     position: relative;
     float: right;
     cursor: pointer;
-    margin-top: -15px;
+    margin-top: -20px;
+    z-index: 2;
+    transition: 0.3s;
 }
 
 .menu-icon {
     display: none;
     background-color: rgba(223, 105, 81, 1);
-    height: 3px;
-    width: 18px;
+    height: 4px;
+    width: 20px;
     position: relative;
+    border-radius: 50px;
 }
 
 .menu-icon::before {
     position: absolute;
     content: "";
     background-color: rgba(223, 105, 81, 1);
-    height: 100%;
+    height: 3.5px;
     width: 100%;
     top: 5px;
+    border-radius: 50px;
 }
 
 .menu-icon::after {
     position: absolute;
     content: "";
     background-color: rgba(223, 105, 81, 1);
-    height: 100%;
+    height: 3.5px;
     width: 100%;
-    top: -5px;
+    top: -4px;
+    border-radius: 50px;
 }
 
-.hm-button {
+.hamburger-menu-button {
     display: none;
 }
 
-.hm-button:checked ~ .hm-icon .menu-icon {
+.hamburger-menu-button:checked ~ .hamburger-menu-icon .menu-icon {
     background-color: transparent;
 }
 
-.hm-button:checked ~ .hm-icon .menu-icon:before {
+.hamburger-menu-button:checked ~ .hamburger-menu-icon .menu-icon:before {
     transform: rotate(-45deg);
     top: 0px;
 }
 
-.hm-button:checked ~ .hm-icon .menu-icon:after {
+.hamburger-menu-button:checked ~ .hamburger-menu-icon .menu-icon:after {
     transform: rotate(45deg);
     top: 0px;
 }
 
 @media (max-width: 768px) {
-    .tnb-nav-bar {
+    .tnb-nav-bar,
+    .h-middle-script {
         display: none;
     }
+
     .menu-icon {
         display: flex;
+    } 
+
+    .hamburger-menu-button:checked ~ .tnb-nav-bar {
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        /* background-color: rgba(255, 255, 255, 0.3);  */
     }
-    .hm-button:checked ~ .tnb-nav-bar {
+
+    .hamburger-menu-button:checked ~ .tnb-nav-bar .nb-nav-elements {
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
-    }	
+        transform: translateY(60%);
+    }
+
+    .hamburger-menu-button:checked ~ .ds-dropdown-menu {
+        
+    }
 }
