--- a/styles/index.css
+++ b/styles/index.css
@@ -305,50 +305,42 @@
 }
 
 .homepage-liberty-banner {
+  background: url("../images/liberty-statue-img.png") no-repeat;
+  background-position: center;
+  background-size: cover;
   display: flex;
-  padding: 50px 0;
-}
-.liberty-banner {
-  display: flex;
-  width: 100%;
-  min-height: 400px;
-}
-.liberty-banner-container {
-  position: relative;
+  justify-content: center;
   width: 100%;
   height: 400px;
 }
-.lb-images {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
 .lb-title-box {
-  max-width: 635px;
-  position: absolute;
-  top: 60%;
-  left: 35%;
-  transform: translate(-50%, -50%);
+  width: 635px;
+  transform: translate(-250px, 125px);
 }
 .lb-title {
   font-family: "Volkhov", serif;
-  font-size: clamp(24px, 5vw, 50px);
+  font-size: clamp(30px, 5vw, 50px);
   font-weight: 700;
   line-height: clamp(40px, 5vw, 72px);
   color: rgba(255, 255, 255, 1);
 }
 .lb-signature {
-  transform: translate(330px, -10px) rotate(2deg);
+  text-align: end;
+  transform: translate(-1px, -5px) rotate(1deg);
 }
 @media (max-width: 1200px) {
-  .lb-title {
-    top: 25%;
+  .lb-title-box {
+    width: 100%;
+    transform: none;
+    text-align: center;
+    padding-top: 100px;
   }
   .lb-signature {
-    width: 250px;
-    position: absolute;
+    transform: none;
+    text-align: center;
   }
 }
+
 .homepage-explore-section {
   display: flex;
   padding: 50px 0;
