--- a/styles/packages.css
+++ b/styles/packages.css
@@ -1,40 +1,110 @@
-@media (max-width: 1400px) {
-    .tour-location {
-        padding: 0 20px;
-    }
+
+.package-location-hero {
+    background-image: url(../images/location/tour-location-homepage.png);
+    height: 766px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.location-heading-hero{
+    padding: 100px;
+}
+.hero-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 63px;
+    z-index: 150;
+    gap: 20px;
+    margin: 0 20px;
+}
+.nav-links-box {
+    width: 1000px;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 15px;
+    color: #fff;
+}
+.hero-nav-links {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+.contact-link {
+    background-color: #df6951;
+    padding: 20px 27px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.location-hero-h4 {
+    color: #ffefec;
+    font-family: "Poppins", sans-serif;
+    font-size: 18;
+    font-weight: 400;
+    letter-spacing: 1.8px;
+    text-align: center;
+}
+.location-hero-h1 {
+    color: #fff;
+    font-family: "Yesteryear", cursive;
+    font-size: 158px;
+    font-weight: 400;
+    line-height: 215px;
+    text-align: center;
+}
+.hero-nav-dropdown {
+    width: 230px;
+    height: 190px;
+    background-image: url(../images/popup-cloud.png);
+    background-repeat: no-repeat;
+    padding: 40px 15px;
+    position: absolute;
+    display: none;
+}
+.hamburger-icon {
+    cursor: pointer;
+    display: none;
+}
+.package-location {
+        padding: 0 200px;
+        transform: translateY(-50px);
 }
 .container {
     max-width: 1400px;
     margin: 0 auto;
 }
-.location-page-container{
+
+.location-page-container {
     display: flex;
     padding: 20px;
+    justify-content: space-between;
+    box-shadow: 0px 4px 48px 12px rgba(0, 0, 0, 0.09);
+    clip-path: inset(0px -48px -48px -48px);
 }
-.location-navbar-box {
+.package-location-navbar-box {
     display: flex;
     justify-content: center;
     padding: 55px 0;
     background: #f8f8f8;
 }
-.location-navbar > div > a {
+.package-location-navbar > div > a {
     font-size: 20px;
     color: #343434;
     font-family: "Poppins";
     font-weight: 700;
     letter-spacing: 2px;
 }
-.location-navbar > div > img {
+.package-location-navbar > div > img {
     padding: 0 15px;
 }
-.location-navbar {
+.package-location-navbar {
     height: 141px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     text-align: center;
 }
 .location-page-box{
-    max-width: 780px;
+    height: 1630px;
     padding: 35px 28px;
 }
 .location-box-h3{
@@ -51,7 +121,10 @@
     padding: 30px 0; 
 }
 .location-form {
+    position: relative;
     padding: 30px;
+    width:481px;
+    height: 1000px;
     background: #ededed;
 }
 .form-box-h2 {
@@ -61,12 +134,6 @@
     text-align: center;
     font-family: "Volkhov", sans-serif;
 }
-@media (max-width: 1500px) {
-    .location-form {
-        background-color: rgba(237, 237, 237, 0.7);
-        max-width: 750px;
-        max-height: 100%;
-    }
 .form-box-p {
     color: #000;
     text-align: center;
@@ -77,7 +144,7 @@
     padding-bottom: 30px;
 }
 .form-box-input {
-    padding: 25px 15px;
+    padding: 10px 15px;
     border: none;
     font-size: 18px;
     font-family: "Poppins";
@@ -95,13 +162,9 @@
 .form-input-box > div {
     background-color: #fff;
     width: 359px;
+    padding: 0px 5px;
     display: flex;
     align-items: center;
-}
-@media (max-width: 1500px) {
-    .form-input-box > div {
-        width: 300px;
-    }
 }
 .form-box-btn {
     width: 176.5px;
@@ -118,17 +181,34 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding-top: 20px;
+    padding-top: 50px;
 }
 .location-img-1 {
     position: absolute;
-    right: 0;
-    bottom: -1000px;
+    right: 200px;
+    bottom: 100px;
     z-index: -1;
 }
 .location-img-2 {
     position: absolute;
-    left: 0;
-    bottom: -1000px;
+    left: 200px;
+    bottom: 0px;
     z-index: -1;
+}
+@media (max-width: 1500px) {
+    .location-form {
+        background-color: rgba(237, 237, 237, 0.7);
+        max-width: 750px;
+        max-height: 100%;
+    }
+}
+@media (max-width: 1500px) {
+    .form-input-box > div {
+        width: 300px;
+    }
+}
+@media (max-width: 850px) {
+    .hamburger-icon {
+        display: block;
+    }
 }
