--- a/styles/shared.css
+++ b/styles/shared.css
@@ -12,9 +12,12 @@ a {
   text-decoration: none;
   color: inherit;
 }
+.hero-section {
+  padding-top: 35px;
+}
 .hes-hero {
   max-width: 1350px;
-  padding: 0 2rem;
+  padding: 0 1rem;
   position: relative;
   margin: 0 auto;
   display: flex;
