--- a/styles/shared.css
+++ b/styles/shared.css
@@ -13,7 +13,7 @@ a {
   color: inherit;
 }
 .hero-section {
-  padding-top: 35px;
+  padding-top: 25px;
 }
 .hes-hero {
   max-width: 1350px;
@@ -216,6 +216,7 @@ a {
     overflow: hidden;
     transform: translateX(100%);
     transition: 0.65s;
+    z-index: 10;
   }
   #hes-check:checked ~ .hes-nav {
     transform: translateX(0);
