--- a/styles/index.css
+++ b/styles/index.css
@@ -310,13 +310,15 @@
   background-size: cover;
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height: 400px;
 }
 .lb-title-box {
-  width: 635px;
+  width: 1350px;
   height: fit-content;
-  transform: translate(-250px, 125px);
+  padding-top: 50px;
+  padding-left: 25px;
 }
 .lb-title {
   font-family: "Volkhov", serif;
@@ -326,19 +328,24 @@
   color: rgba(255, 255, 255, 1);
 }
 .lb-signature {
-  text-align: end;
-  transform: translate(-1px, -5px) rotate(1deg);
+  padding-left: 315px;
 }
+
 @media (max-width: 1200px) {
   .lb-title-box {
     width: 100%;
-    transform: none;
     text-align: center;
-    padding-top: 150px;
+  }
+}
+@media (max-width: 1000px) {
+  .homepage-liberty-banner {
+    background-position-x: 75%;
   }
   .lb-signature {
-    transform: none;
-    text-align: center;
+    padding-left: 0;
+  }
+  .lb-signature-img {
+    width: 200px;
   }
 }
 
