--- a/styles/index.css
+++ b/styles/index.css
@@ -705,12 +705,12 @@
   z-index: -1;
 }
 
-
+.homepage-footer{
+  position: relative;
+}
 
 .footer-container{
   padding:94px 0 44px;
-  position: relative;
-  height: 484px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -724,7 +724,6 @@
   display: flex;
   justify-content: space-between;
   font-family: "Manrope",sans-serif;
-  position: relative;
 }
 
 .footer-column-one{
@@ -748,7 +747,7 @@ gap: 16px;
 
 .fa-brands{
   color: #df6951;
-  width: 20px;
+  max-width: 20px;
 }
 
 .footer-column-two{
@@ -797,8 +796,7 @@ gap: 16px;
 }
 
 .footer-int{
-width: 250px;
-height: 52px;
+max-width: 250px;
 background: #EEEEFF;
 border: none;
 padding-left: 20px;
@@ -845,14 +843,22 @@ padding-left: 20px;
   margin: 0 auto;
 }
 
-/*.footer-bg{
+.footer-bg{
   position: absolute;
   right: 0;
   bottom: 0;
   width: 577px;
-  height: 484px;
+}
 
-}*/
+@media (max-width: 1200px){
+  .footer-main{
+    flex-wrap: wrap;
+  }
+} 
+  
+
+
+
 
 
 @media (max-width: 750px) {
