--- a/styles/about.css
+++ b/styles/about.css
@@ -1,5 +1,4 @@
 .about-page-hero {
-  display: flex;
   background-image: url("../images/about/about-header-img.png");
   background-repeat: no-repeat;
   background-position: center;
@@ -7,7 +6,7 @@
   height: 100vh;
 }
 
-.h-middle-script {
+.hes-title-box {
   margin: 195px auto;
   text-align: center;
   color: rgba(255, 255, 255, 1);
