--- a/styles/index.css
+++ b/styles/index.css
@@ -875,6 +875,41 @@
   z-index: -1;
 }
 
+@media (max-width: 750px) {
+  .tc-hat-image,
+  .tc-seashell-image,
+  .tc-place-image,
+  .sb-left-arrow,
+  .sb-right-arrow {
+    max-width: 25%;
+  }
+}
+
+@media (max-width: 625px) {
+  .sb-left-arrow,
+  .sb-right-arrow,
+  .wb-small-quotes {
+    display: none;
+  }
+}
+
+@media (max-width: 360px) {
+  .sb-designer-image {
+    max-width: 135px;
+  }
+
+  .sb-writing-box {
+    padding: 60px 30px 15px 30px;
+    height: 185px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+  }
+}
+
+.homepage-footer {
+  position: relative;
+}
+
 .footer-container {
   padding: 94px 0 44px;
   position: relative;
@@ -1001,42 +1036,15 @@
   margin: 0 auto;
 }
 
-/*.footer-bg{
+.footer-bg {
   position: absolute;
   right: 0;
   bottom: 0;
   width: 577px;
-  height: 484px;
-
-}*/
-
-@media (max-width: 750px) {
-  .tc-hat-image,
-  .tc-seashell-image,
-  .tc-place-image,
-  .sb-left-arrow,
-  .sb-right-arrow {
-    max-width: 25%;
-  }
 }
 
-@media (max-width: 625px) {
-  .sb-left-arrow,
-  .sb-right-arrow,
-  .wb-small-quotes {
-    display: none;
-  }
-}
-
-@media (max-width: 360px) {
-  .sb-designer-image {
-    max-width: 135px;
-  }
-
-  .sb-writing-box {
-    padding: 60px 30px 15px 30px;
-    height: 185px;
-    overflow-x: hidden;
-    overflow-y: scroll;
+@media (max-width: 1200px) {
+  .footer-main {
+    flex-wrap: wrap;
   }
 }
